--- a/Ebusinesstemplate/Views/Shared/Components/Footer/Default.cshtml
+++ b/Ebusinesstemplate/Views/Shared/Components/Footer/Default.cshtml
@@ -40,8 +40,8 @@
                             </p>
                             <div class="footer-contacts">
                                 <p><span>Tel:</span> @Model["Phone"]</p>
-                                <p><span>Email:</span> contact@example.com</p>
-                                <p><span>Working Hours:</span> 9am-5pm</p>
+                                <p><span>Email:</span>@Model["Email"]</p>
+                                <p><span>Working Hours:</span> @Model["Hour"]</p>
                             </div>
                         </div>
                     </div>
